clusters/production/automation/music-assistant/music-assistant-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: music-assistant
  namespace: automation
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - music.rees.ca
  rules:
  - backendRefs:
    - name: music-assistant
      port: 8095
